--- a/cblocks/libvncserver.cbp
+++ b/cblocks/libvncserver.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="DLL">
-				<Option output="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).dll" imp_lib="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).a" def_file="$(TARGET_OUTPUT_DIR)$(TARGET_OUTPUT_BASENAME).def" prefix_auto="0" extension_auto="0" />
+				<Option output="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).dll" imp_lib="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).a" def_file="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).def" prefix_auto="0" extension_auto="0" />
 				<Option working_dir="$(PROJECT_DIR)../../DLL" />
 				<Option object_output="obj/Debug/" />
 				<Option type="3" />
@@ -23,6 +23,13 @@
 					<Add library="z" />
 					<Add library="jpeg" />
 				</Linker>
+				<ExtraCommands>
+					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h              } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
+					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfbproto.h     } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
+					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/win-config.h } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
+					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h              }  $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
+					<Mode after="always" />
+				</ExtraCommands>
 			</Target>
 			<Target title="Release">
 				<Option output="libvncserver" prefix_auto="1" extension_auto="1" />
@@ -55,7 +62,7 @@
 					<Add library="z" />
 				</Linker>
 				<ExtraCommands>
-					<Add after="install  $(TARGET_OUTPUT_FILE)  $(TARGET_COMPILER_DIR)bin/" />
+					<Add before='$CMD_MKDIR &quot;$(TARGET_COMPILER_DIR)include/rfb&quot;' />
 					<Mode after="always" />
 				</ExtraCommands>
 			</Target>
@@ -75,10 +82,6 @@
 					<Add library="jpeg" />
 					<Add library="z" />
 				</Linker>
-				<ExtraCommands>
-					<Add after="install  $(TARGET_OUTPUT_FILE)  $(TARGET_COMPILER_DIR)bin/" />
-					<Mode after="always" />
-				</ExtraCommands>
 			</Target>
 			<Target title="client">
 				<Option output="vncserver" prefix_auto="1" extension_auto="1" />
@@ -105,14 +108,6 @@
 			<Add directory="../rfb" />
 			<Add directory=".." />
 		</Compiler>
-		<ExtraCommands>
-			<Add before='install -d &quot;$(TARGET_COMPILER_DIR)include/rfb&quot;' />
-			<Add before='install  $(PROJECT_DIR)../rfb/rfb.h               &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot;' />
-			<Add before='install  $(PROJECT_DIR)../rfb/rfbproto.h     &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot;' />
-			<Add before='install  $(PROJECT_DIR)../rfb/win-config.h &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot;' />
-			<Add before='install  $(PROJECT_DIR)../rfb/rfb.h               &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot;' />
-			<Mode after="always" />
-		</ExtraCommands>
 		<Unit filename="../client_examples/ppmtest.c">
 			<Option compilerVar="CC" />
 			<Option target="client" />
