--- a/Makefile.in
+++ b/Makefile.in
@@ -91,8 +91,8 @@ PRE_UNINSTALL = :
 POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
-@WINDOWS_TRUE@am__append_1 = 
-@WINDOWS_FALSE@am__append_2 = 
+@WINDOWS_TRUE@am__append_1 = -no-undefined
+@WINDOWS_FALSE@am__append_2 = -ldl
 subdir = .
 ACLOCAL_M4 = $(top_srcdir)/aclocal.m4
 am__aclocal_m4_deps = $(top_srcdir)/m4/libtool.m4 \
@@ -143,7 +143,6 @@ am__installdirs = "$(DESTDIR)$(libdir)" \
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libvncasync_la_LIBADD =
 am__dirstamp = $(am__leading_dot)dirstamp
-am__objects_1 =
 am_libvncasync_la_OBJECTS = libvncserver/translate.lo \
 	libvncserver/auth.lo libvncserver/cargs.lo \
 	libvncserver/corre.lo libvncserver/cursor.lo \
@@ -158,8 +157,7 @@ am_libvncasync_la_OBJECTS = libvncserver/translate.lo \
 	libvncserver/zrle.lo libvncserver/zrleoutstream.lo \
 	common/d3des.lo common/md5.lo common/minilzo.lo \
 	common/rfbcrypto_included.lo common/sha1.lo \
-	common/turbojpeg.lo common/vncauth.lo common/base64.lo \
-	$(am__objects_1) $(am__objects_1)
+	common/turbojpeg.lo common/vncauth.lo common/base64.lo
 libvncasync_la_OBJECTS = $(am_libvncasync_la_OBJECTS)
 AM_V_lt = $(am__v_lt_@AM_V@)
 am__v_lt_ = $(am__v_lt_@AM_DEFAULT_V@)
@@ -443,10 +441,9 @@ libvncasync_la_SOURCES = libvncserver/translate.c libvncserver/auth.c \
 	libvncserver/ws_decode.c libvncserver/zrle.c \
 	libvncserver/zrleoutstream.c common/d3des.c common/md5.c \
 	common/minilzo.c common/rfbcrypto_included.c common/sha1.c \
-	common/turbojpeg.c common/vncauth.c common/base64.c \
-	$(am__append_1) $(am__append_2)
-libvncasync_la_LDFLAGS = $(JPEG_LIBS) $(LIBPNG_LIBS) -ldl -release \
-	$(VERSION) -shared -no-undefined
+	common/turbojpeg.c common/vncauth.c common/base64.c
+libvncasync_la_LDFLAGS = $(JPEG_LIBS) $(LIBPNG_LIBS) -release \
+	$(VERSION) -shared $(am__append_1) $(am__append_2)
 all: all-am
 
 .SUFFIXES:
