--- a/cblocks/libvncserver.cbp
+++ b/cblocks/libvncserver.cbp
@@ -24,10 +24,10 @@
 					<Add library="jpeg" />
 				</Linker>
 				<ExtraCommands>
-					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h              } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
-					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfbproto.h     } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
-					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/win-config.h } $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
-					<Add before='$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h              }  $TO_NATIVE_PATH{ &quot;$(TARGET_COMPILER_DIR)include/rfb/&quot; }' />
+					<Add before="$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h            } $TO_NATIVE_PATH{  $(TARGET_COMPILER_DIR)include/rfb/ }" />
+					<Add before="$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfbproto.h     } $TO_NATIVE_PATH{  $(TARGET_COMPILER_DIR)include/rfb/ }" />
+					<Add before="$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/win-config.h } $TO_NATIVE_PATH{  $(TARGET_COMPILER_DIR)include/rfb/  }" />
+					<Add before="$CMD_CP  $TO_NATIVE_PATH{ $(PROJECT_DIR)../rfb/rfb.h            }  $TO_NATIVE_PATH{ $(TARGET_COMPILER_DIR)include/rfb/ }" />
 					<Mode after="always" />
 				</ExtraCommands>
 			</Target>
@@ -100,6 +100,24 @@
 					<Add library="vncasync" />
 				</Linker>
 			</Target>
+			<Target title="linux">
+				<Option output="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).dll" imp_lib="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).a" def_file="$(PROJECT_DIR)../../DLL/$(PROJECT_NAME).def" prefix_auto="0" extension_auto="0" />
+				<Option working_dir="$(PROJECT_DIR)../../DLL" />
+				<Option object_output="obj/Debug/" />
+				<Option type="3" />
+				<Option compiler="gcc" />
+				<Option createDefFile="1" />
+				<Option createStaticLib="1" />
+				<Compiler>
+					<Add option="-g" />
+					<Add directory="../../libvncserver" />
+					<Add directory="../common" />
+				</Compiler>
+				<Linker>
+					<Add library="z" />
+					<Add library="jpeg" />
+				</Linker>
+			</Target>
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
@@ -122,6 +140,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/d3des.c">
 			<Option compilerVar="CC" />
@@ -129,24 +148,28 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/d3des.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/lzoconf.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/lzodefs.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/md5.c">
 			<Option compilerVar="CC" />
@@ -154,12 +177,14 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/md5.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/minilzo.c">
 			<Option compilerVar="CC" />
@@ -167,18 +192,21 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/minilzo.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/rfbcrypto.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/rfbcrypto_included.c">
 			<Option compilerVar="CC" />
@@ -188,6 +216,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/rfbcrypto_libgcrypt.c">
 			<Option compilerVar="CC" />
@@ -202,12 +231,14 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/sha.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/sha1.c">
 			<Option compilerVar="CC" />
@@ -215,6 +246,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/turbojpeg.c">
 			<Option compilerVar="CC" />
@@ -222,12 +254,14 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/turbojpeg.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/vncauth.c">
 			<Option compilerVar="CC" />
@@ -235,6 +269,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../common/zywrletemplate.c">
 			<Option compilerVar="CC" />
@@ -242,6 +277,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../configure.ac" />
 		<Unit filename="../examples/example.c">
@@ -254,6 +290,7 @@
 		</Unit>
 		<Unit filename="../libvncasync.pc">
 			<Option target="DLL" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncclient/corre.c">
 			<Option compilerVar="CC" />
@@ -321,6 +358,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/cargs.c">
 			<Option compilerVar="CC" />
@@ -328,6 +366,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/corre.c">
 			<Option compilerVar="CC" />
@@ -335,6 +374,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/cursor.c">
 			<Option compilerVar="CC" />
@@ -342,6 +382,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/cutpaste.c">
 			<Option compilerVar="CC" />
@@ -349,6 +390,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/draw.c">
 			<Option compilerVar="CC" />
@@ -356,6 +398,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/font.c">
 			<Option compilerVar="CC" />
@@ -363,6 +406,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/hextile.c">
 			<Option compilerVar="CC" />
@@ -370,6 +414,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/main.c">
 			<Option compilerVar="CC" />
@@ -377,6 +422,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/private.h" />
 		<Unit filename="../libvncserver/rfbregion.c">
@@ -385,6 +431,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/rfbserver.c">
 			<Option compilerVar="CC" />
@@ -392,6 +439,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/rfbssl_gnutls.c">
 			<Option compilerVar="CC" />
@@ -403,6 +451,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/rfbssl_openssl.c">
 			<Option compilerVar="CC" />
@@ -414,6 +463,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/scale.c">
 			<Option compilerVar="CC" />
@@ -421,6 +471,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/scale.h" />
 		<Unit filename="../libvncserver/selbox.c">
@@ -429,6 +480,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/stats.c">
 			<Option compilerVar="CC" />
@@ -436,6 +488,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/tableinit24.c">
 			<Option compilerVar="CC" />
@@ -467,6 +520,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/ultra.c">
 			<Option compilerVar="CC" />
@@ -474,6 +528,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/ws_decode.c">
 			<Option compilerVar="CC" />
@@ -486,6 +541,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/zrle.c">
 			<Option compilerVar="CC" />
@@ -493,6 +549,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/zrleencodetemplate.c">
 			<Option compilerVar="CC" />
@@ -504,6 +561,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/zrleoutstream.h" />
 		<Unit filename="../libvncserver/zrlepalettehelper.c">
@@ -512,6 +570,7 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../libvncserver/zrlepalettehelper.h" />
 		<Unit filename="../libvncserver/zrletypes.h" />
@@ -520,42 +579,49 @@
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/keysym.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/rfb.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/rfbclient.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/rfbproto.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/rfbregion.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Unit filename="../rfb/win-config.h">
 			<Option target="DLL" />
 			<Option target="Release" />
 			<Option target="static" />
 			<Option target="shared" />
+			<Option target="linux" />
 		</Unit>
 		<Extensions>
 			<lib_finder disable_auto="1" />
