--- a/cblocks/libvncserver.cbp
+++ b/cblocks/libvncserver.cbp
@@ -110,6 +110,7 @@
 				<Option createStaticLib="1" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DHAVE_SYS_STAT_H" />
 					<Add directory="../../libvncserver" />
 					<Add directory="../common" />
 				</Compiler>
@@ -121,6 +122,8 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DHAVE_CONFIG_H" />
+			<Add option="-DBUILDING_VNCASYNC" />
 			<Add directory="../../libvncserver" />
 			<Add directory="../common" />
 			<Add directory="../rfb" />
